git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@12147 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 28db9f24b1e395d457f5e2ebbfa387b80ac67bae

--- a/sitac_projects/Sitac_android/res/menu/menu.xml
+++ b/sitac_projects/Sitac_android/res/menu/menu.xml
@@ -23,4 +23,7 @@
      <item android:id="@+id/undo"
            android:title="@string/undo"
            android:icon="@drawable/undo" />
+     <item android:id="@+id/redo"
+           android:title="@string/redo"
+           android:icon="@drawable/redo" />      
 </menu>
