--- a/sitac_projects/Sitac_android/res/layout/child.xml
+++ b/sitac_projects/Sitac_android/res/layout/child.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="fill_parent">
 
     <ImageView
         android:id="@+id/image"
@@ -14,7 +14,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right" 
+        android:gravity="center_vertical"
         android:layout_toRightOf="@id/image"
         android:textColor="#ff000000"/>
+        
+    <TextView
+    	android:id="@+id/number"
+    	android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/name"
+        android:text="-1"
+        android:visibility="invisible"/>   
 
 </RelativeLayout>
